<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="mainViewModel"
            type="com.example.altimetrik.viewmodel.MainViewModel" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/progress_proposals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:visibility="@{mainViewModel.proposalsProgress}" />

            <EditText
                android:id="@+id/editText_mainSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_topics_teachers_and_schools"
                android:text="@={mainViewModel.mainSearchField}" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_proposals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:visibility="@{mainViewModel.proposalsRecycler}"
                tools:listitem="@layout/item_proposal" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{mainViewModel::onClickSearch}"
            android:src="@drawable/ic_search_white_24dp" />
    </android.support.design.widget.CoordinatorLayout>

</layout>
